[project]
name = "minol"
version = "1.0.0"
description = "Scraper for the Minol Kundenportal (utility metering data)"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BastiOfBerlin" }]
readme = "README.md"
keywords = ["minol", "scraper", "metering", "consumption", "kundenportal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://codeberg.org/BastiOfBerlin/minol"
Repository = "https://codeberg.org/BastiOfBerlin/minol"
Issues = "https://codeberg.org/BastiOfBerlin/minol/issues"

[project.scripts]
minol = "minol.cli:main"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"
